# bsllc-Discord-Bot

./: LICENSE  README.md  makefile  pyproject.toml  tmp.txt
BOT/: bsllc.py  run.py  slash_master.py
BOT/slash/: add.py  chat.py  pause.py  play.py  resume.py  skip.py  sync.py  whoami.py
BOT/utils/: alterts.py  modals.py  openaiprompter.py  ytdl.py
